[project]
name = "liyans-backend"
version = "0.1.0"
description = "FastAPI control plane for the Liyan platform"
requires-python = ">=3.11,<3.12"
dependencies = [
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.139,<0.140",
  "httpx>=0.28,<0.29",
  "liyans-contracts",
  "numpy>=2.1,<3",
  "orjson>=3.10,<4",
  "prometheus-client>=0.22,<1",
  "pydantic-settings>=2.7,<3",
  "pyjwt[crypto]>=2.10,<3",
  "sqlalchemy[asyncio]>=2.0,<3",
  "starlette>=1.3.1,<1.4",
  "sympy>=1.13,<2",
  "uvicorn[standard]>=0.51,<0.52",
]

[project.optional-dependencies]
retrieval = [
  "faiss-cpu>=1.9,<2",
  "numpy>=2.1,<3",
]
dev = [
  "coverage>=7.6,<8",
  "cyclonedx-bom>=7.1,<8",
  "hypothesis>=6.120,<7",
  "pip-audit>=2.9,<3",
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.2,<2",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
  "testcontainers[postgres]>=4.10,<5",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/liyans"]

[tool.uv.sources]
liyans-contracts = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
  "integration: requires an external PostgreSQL test database",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
